Move RKN check to roskomsvoboda

--- a/logstash.conf
+++ b/logstash.conf
@@ -21,7 +21,7 @@ filter {
     }
     dns {
         resolve => ["spamhaus_reverse_lookup"]
-        nameserver => ["1.1.1.1", "8.8.8.8"]
+        nameserver => ["8.8.8.8"]
         add_tag => ["dns_successful_lookup"]
         action => replace
     }
@@ -56,20 +56,22 @@ filter {
     #     database => "D:/admin/Downloads/studies/diplom/IP2PROXY-LITE-PX10.BIN"
     # }
 
-    # RKN Lock check
+    # RKN block check
     http {
-        url => "http://%{ip}"
+        url => "http://reestr.rublacklist.net/search/?q=%{ip}"
+        target_body => "rkn_check"
     }
-    if [body] =~ /^Доступ к информационному ресурсу ограничен$/{
-        mutate {
-            add_tag => ["Blocked by ISP"]
-            remove_tag => ["httprequestfailed"]
-        }        
+    grok {
+        match => {
+            # "rkn_check" => "^: %{DATA:count}</h3>&" Fix this
+            "rkn_check" => "(: ?<count></h3>)"
+        }
     }
 
     # Final cleanup
     mutate {
-        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body"]
+        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check"]
+        remove_tag => ["httprequestfailed"]
     }
 }
 
