partailly fix rkn blockcheck

--- a/logstash.conf
+++ b/logstash.conf
@@ -58,20 +58,34 @@ filter {
 
     # RKN block check
     http {
-        url => "http://reestr.rublacklist.net/search/?q=%{ip}"
+        url => "https://reestr.rublacklist.net/search/?q=%{ip}"
         target_body => "rkn_check"
+    }
+    # https://regex101.com/ - regex compiler
+    grok {
+        match => {
+            "rkn_check" => "(?<cnt>(?::[[:blank:]]\d{1,3}\<\/h3>))"
+        }
     }
     grok {
         match => {
-            # "rkn_check" => "^: %{DATA:count}</h3>&" Fix this
-            "rkn_check" => "(: ?<count></h3>)"
+            "cnt" => "(?<am>(?:\d{1,3}))"
         }
     }
-
+    grok {
+        match => {
+            "am" => "%{NUMBER:count}"
+        }
+    }
+    if [count] > 0 {
+        mutate {
+            add_tag => ["RKN blocklisted"]
+        }
+    }
+    
     # Final cleanup
     mutate {
-        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check"]
-        remove_tag => ["httprequestfailed"]
+        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count", "am"]
     }
 }
 
