fully fixed RKN check

--- a/logstash.conf
+++ b/logstash.conf
@@ -69,12 +69,12 @@ filter {
     }
     grok {
         match => {
-            "cnt" => "(?<am>(?:\d{1,3}))"
+            "cnt" => "(?<count>(?:\d{1,3}))"
         }
     }
-    grok {
-        match => {
-            "am" => "%{NUMBER:count}"
+    mutate {
+        convert => {
+            "count" => "integer"
         }
     }
     if [count] > 0 {
@@ -85,7 +85,7 @@ filter {
     
     # Final cleanup
     mutate {
-        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count", "am"]
+        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count"]
     }
 }
 
