fix typo in spamhaus, partial add abuseipdb check

--- a/logstash.conf
+++ b/logstash.conf
@@ -17,7 +17,7 @@ filter {
     # SpamHaus IP Checker
     # https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
     # https://www.spamhaus.org/zen/
-    if [target_ipv] == 6 {  
+    if [target_ipv] == 4 {  
         if [target_pub_ip] == [true] {
             grok {
                 match => {
@@ -85,9 +85,22 @@ filter {
             }
         }
     }
+
+    # AbuseIPDB check
+    if [target_pub_ip] == [true] {
+        http {
+            url => "https://www.abuseipdb.com/check/%{ip}"
+            target_body => "ipdb_check"
+        }
+        grok {
+            match => {
+                "ipdb_check" => "(?<phrase>(?:(reported <b>\d{1,3}\,)(\d{1,3}<\/b>)))"
+            }
+        }
+    }
     # Final cleanup
     mutate {
-        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count"]
+        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count", "ipdb_check"]
     }
 }
 
