introduce Virustotal checking

--- a/logstash.conf
+++ b/logstash.conf
@@ -86,16 +86,14 @@ filter {
         }
     }
 
-    # AbuseIPDB check
-    if [target_pub_ip] == [true] {
-        http {
-            url => "https://www.abuseipdb.com/check/%{ip}"
-            target_body => "ipdb_check"
-        }
-        grok {
-            match => {
-                "ipdb_check" => "(?<phrase>(?:(reported <b>\d{1,3}\,)(\d{1,3}<\/b>)))"
-            }
+    # Virustotal check
+    if [target_pub_ip] == [true]
+    {
+        virustotalthree{
+            apikey => ""
+            field => "ip"
+            lookup_type => "ip"
+            target => "VTinfo"
         }
     }
     # Final cleanup
