first attemt to add abuseipdb checker

--- a/logstash.conf
+++ b/logstash.conf
@@ -87,8 +87,7 @@ filter {
     }
 
     # Virustotal check
-    if [target_pub_ip] == [true]
-    {
+    if [target_pub_ip] == [true] {
         virustotalthree{
             apikey => ""
             field => "ip"
@@ -96,6 +95,16 @@ filter {
             target => "VTinfo"
         }
     }
+
+    # Abuse IP DB check
+    if [target_pub_ip] == [true] {
+        abuseipdb{
+            apikey => ""
+            field => "ip"
+            target => "AbIPDB_info"
+        }
+    }
+
     # Final cleanup
     mutate {
         remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count", "ipdb_check"]
