--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 IP2PROXY-LITE-PX10.BIN
-logstash-7.15.2
-logstash-7.16.2
-launch.bat
 vt_api_key.txt
+logstash-7.16.3
+logstash-7.15.2
+apuseipdb_key.txt
+.vscode
