add ipinfo usage

--- a/logstash.conf
+++ b/logstash.conf
@@ -56,6 +56,11 @@ filter {
             target => "asn"
         }
     }
+    if [target_pub_ip] == [true] {
+        ipinfo {
+            ip => "ip"
+        }
+    }
 
     # RKN block check
     if [target_pub_ip] == [true] {
@@ -96,14 +101,14 @@ filter {
         }
     }
 
-    # Abuse IP DB check
-    if [target_pub_ip] == [true] {
-        abuseipdb{
-            apikey => ""
-            ip => "ip"
-            target => "AbIPDB_info"
-        }
-    }
+    # # Abuse IP DB check
+    # if [target_pub_ip] == [true] {
+    #     abuseip_db{
+    #         apikey => ""
+    #         ip => "ip"
+    #         target => "AbIPDB_info"
+    #     }
+    # }
 
     # Final cleanup
     mutate {
