removed ipinfo, fix readme

--- a/logstash.conf
+++ b/logstash.conf
@@ -56,11 +56,6 @@ filter {
             target => "asn"
         }
     }
-    if [target_pub_ip] == [true] {
-        ipinfo {
-            ip => "ip"
-        }
-    }
 
     # RKN block check
     if [target_pub_ip] == [true] {
@@ -102,13 +97,13 @@ filter {
     }
 
     # # Abuse IP DB check
-    # if [target_pub_ip] == [true] {
-    #     abuseip_db{
-    #         apikey => ""
-    #         ip => "ip"
-    #         target => "AbIPDB_info"
-    #     }
-    # }
+    if [target_pub_ip] == [true] {
+        abuseipdb_rb {
+            apikey => ""
+            ip => "ip"
+            target => "abuseipdb_rb"
+        }
+    }
 
     # Final cleanup
     mutate {
