move abuseipdb check from buggy plugin to http

--- a/logstash.conf
+++ b/logstash.conf
@@ -98,10 +98,21 @@ filter {
 
     # # Abuse IP DB check
     if [target_pub_ip] == [true] {
-        abuseipdb_rb {
-            apikey => ""
-            ip => "ip"
-            target => "abuseipdb_rb"
+        # abuseipdbrb {
+        #     apikey => ""
+        #     ip => "ip"
+        #     target => "abuseipdbrb"
+        # }
+        http {
+            url => "https://api.abuseipdb.com/api/v2/check"
+            headers => {
+                "Acccept" => "application/json"
+                "Key" => ""
+            }
+            query => {
+                "ipAddress" => "%{ip}"
+            }
+            target_body => "abuseipdb"
         }
     }
 
