--- a/logstash.conf
+++ b/logstash.conf
@@ -43,8 +43,12 @@ filter {
                 }
             }
         }
+        mutate {
+            remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "spamhaus_reverse_lookup"]
+        }
     }
-    # IP AS + Country Info
+
+    # # IP AS + Country Info
     if [target_pub_ip] == [true] {
         geoip {
             source => "ip"
@@ -57,7 +61,7 @@ filter {
         }
     }
 
-    # RKN block check
+    # # RKN block check
     if [target_pub_ip] == [true] {
         http {
             url => "https://reestr.rublacklist.net/search/?q=%{ip}"
@@ -84,9 +88,12 @@ filter {
                 add_tag => ["RKN blocklisted"]
             }
         }
+        mutate {
+            remove_field => ["body", "headers", "rkn_check", "cnt", "count"]
+        }
     }
 
-    # Virustotal check
+    # # Virustotal check
     if [target_pub_ip] == [true] {
         virustotalthree{
             apikey => ""
@@ -98,11 +105,6 @@ filter {
 
     # # Abuse IP DB check
     if [target_pub_ip] == [true] {
-        # abuseipdbrb {
-        #     apikey => ""
-        #     ip => "ip"
-        #     target => "abuseipdbrb"
-        # }
         http {
             url => "https://api.abuseipdb.com/api/v2/check"
             headers => {
@@ -114,12 +116,15 @@ filter {
             }
             target_body => "abuseipdb"
         }
+        mutate {
+            remove_field => ["headers"]
+        }
+        split {
+            field => "abuseipdb"
+        }
     }
 
     # Final cleanup
-    mutate {
-        remove_field => ["addr1", "addr2", "addr3", "addr4", "ip", "message", "host", "spamhaus_reverse_lookup", "body", "headers", "rkn_check", "cnt", "count", "ipdb_check"]
-    }
 }
 
 output {
