introduce team cymru check via http (partial)

--- a/logstash.conf
+++ b/logstash.conf
@@ -124,6 +124,17 @@ filter {
         }
     }
 
+    # Team Cymru check
+    if [target_pub_ip] == [true] {
+        http {
+            url => "https://reputation.team-cymru.com/script/search.php"
+            query => {
+                "ips" => "%{ip}"
+            }
+            verb => "POST"
+            target_body => "team_cymru"
+        }
+    }
     # Final cleanup
 }
 
