introduce teamcymru check

--- a/logstash.conf
+++ b/logstash.conf
@@ -14,9 +14,9 @@ filter {
         target_ipv => "src_ipv"
         target_pub_ip => "src_public_ip"
     }
-    # SpamHaus IP Checker
-    # https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
-    # https://www.spamhaus.org/zen/
+    SpamHaus IP Checker
+    https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
+    https://www.spamhaus.org/zen/
     if [target_pub_ip] == [true] {  
         if [target_ipv] == 4{
             grok {
@@ -126,13 +126,11 @@ filter {
 
     # Team Cymru check
     if [target_pub_ip] == [true] {
-        http {
-            url => "https://reputation.team-cymru.com/script/search.php"
-            query => {
-                "ips" => "%{ip}"
-            }
-            verb => "POST"
-            target_body => "team_cymru"
+        if [target_ipv] == 4 {
+                teamcymru
+                {
+                    ip => "ip"
+                }
         }
     }
     # Final cleanup
