--- a/logstash.conf
+++ b/logstash.conf
@@ -14,9 +14,9 @@ filter {
         target_ipv => "src_ipv"
         target_pub_ip => "src_public_ip"
     }
-    SpamHaus IP Checker
-    https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
-    https://www.spamhaus.org/zen/
+    # SpamHaus IP Checker
+    # https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
+    # https://www.spamhaus.org/zen/
     if [target_pub_ip] == [true] {  
         if [target_ipv] == 4{
             grok {
@@ -48,7 +48,7 @@ filter {
         }
     }
 
-    # # IP AS + Country Info
+    # IP AS + Country Info
     if [target_pub_ip] == [true] {
         geoip {
             source => "ip"
@@ -61,7 +61,7 @@ filter {
         }
     }
 
-    # # RKN block check
+    # RKN block check
     if [target_pub_ip] == [true] {
         http {
             url => "https://reestr.rublacklist.net/search/?q=%{ip}"
@@ -93,7 +93,7 @@ filter {
         }
     }
 
-    # # Virustotal check
+    # Virustotal check
     if [target_pub_ip] == [true] {
         virustotalthree{
             apikey => ""
@@ -103,7 +103,7 @@ filter {
         }
     }
 
-    # # Abuse IP DB check
+    # Abuse IP DB check
     if [target_pub_ip] == [true] {
         http {
             url => "https://api.abuseipdb.com/api/v2/check"
@@ -119,9 +119,6 @@ filter {
         mutate {
             remove_field => ["headers"]
         }
-        split {
-            field => "abuseipdb"
-        }
     }
 
     # Team Cymru check
@@ -133,7 +130,6 @@ filter {
                 }
         }
     }
-    # Final cleanup
 }
 
 output {
