Изменен фильтр Virustotal, обновлен readme

--- a/logstash.conf
+++ b/logstash.conf
@@ -7,6 +7,7 @@ filter {
     grok {
         match => {
             "message" => "%{IPORHOST:ip}"
+            tag_on_failure => ["Is not IP"]
         }
     }
     public_ip {
@@ -22,6 +23,7 @@ filter {
             grok {
                 match => {
                     "message" => "%{WORD:addr1}.%{WORD:addr2}.%{WORD:addr3}.%{WORD:addr4}"
+                    tag_on_failure => ["Failed parsing IP"]
                 }
             }
             mutate {
@@ -82,12 +84,21 @@ filter {
 
     # Virustotal check
     if [target_pub_ip] == [true] {
-        virustotalthree{
-            apikey => ""
-            field => "ip"
-            lookup_type => "ip"
-            target => "VTinfo"
+        http {
+            url => "https://www.virustotal.com/api/v3/ip_addresses/%{ip}"
+            headers => {
+                "x-apikey" => ""
+            }
+            target_body => "vt"
+            target_headers => "[@metadata][vt-response-header]"
         }
+        mutate {
+            copy => {
+                "[vt][data][attributes][reputation]" => "vt_score"
+            }
+            remove_field => ["vt"]
+        }
+
     }
 
     # Abuse IP DB check
