Обновлен readme, исправлен вывод AbuseIPDB

--- a/logstash.conf
+++ b/logstash.conf
@@ -84,21 +84,22 @@ filter {
 
     # Virustotal check
     if [target_pub_ip] == [true] {
-        http {
-            url => "https://www.virustotal.com/api/v3/ip_addresses/%{ip}"
-            headers => {
-                "x-apikey" => ""
+        if [target_ipv] == 4 {
+            http {
+                url => "https://www.virustotal.com/api/v3/ip_addresses/%{ip}"
+                headers => {
+                    "x-apikey" => ""
+                }
+                target_body => "vt"
+                target_headers => "[@metadata][vt-response-header]"
             }
-            target_body => "vt"
-            target_headers => "[@metadata][vt-response-header]"
-        }
-        mutate {
-            copy => {
-                "[vt][data][attributes][reputation]" => "vt_score"
+            mutate {
+                copy => {
+                    "[vt][data][attributes][reputation]" => "virustotal_score"
+                }
+                remove_field => ["vt"]
             }
-            remove_field => ["vt"]
         }
-
     }
 
     # Abuse IP DB check
@@ -113,9 +114,13 @@ filter {
                 "ipAddress" => "%{ip}"
             }
             target_body => "abuseipdb"
+            target_headers => "[@metadata][abuseipdb_response_headers]"
         }
         mutate {
-            remove_field => ["headers"]
+            copy => {
+                "[abuseipdb][data][abuseConfidenceScore]" => "abuseipdb_score"
+            }
+            remove_field => ["headers", "abuseipdb"]
         }
     }
 
