Удален РКН, добавлен Alienvault

--- a/logstash.conf
+++ b/logstash.conf
@@ -19,7 +19,7 @@ filter {
     # https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
     # https://www.spamhaus.org/zen/
     if [target_pub_ip] == [true] {  
-        if [target_ipv] == 4{
+        if [src_ipv] == '4' {
             grok {
                 match => {
                     "message" => "%{WORD:addr1}.%{WORD:addr2}.%{WORD:addr3}.%{WORD:addr4}"
@@ -38,7 +38,7 @@ filter {
                 action => replace
             }
             if "dns_successful_lookup" in [tags] {
-                if [spamhaus_reverse_lookup] == "127.0.0.2" {
+                if [spamhaus_reverse_lookup] == "127.0.0.4" {
                     mutate {
                         add_tag => [ "spam_address" ]
                     }
@@ -50,48 +50,33 @@ filter {
         }
     }
 
-    # RKN block check
+    # Alienvault Check
     if [target_pub_ip] == [true] {
         http {
-            url => "https://reestr.rublacklist.net/search/?q=%{ip}"
-            target_body => "rkn_check"
-        }
-        # https://regex101.com/ - regex compiler
-        grok {
-            match => {
-                "rkn_check" => "(?<cnt>(?::[[:blank:]]\d{1,5}\<\/h3>))"
+            url => "https://otx.alienvault.com/api/v1/indicators/IPv%{src_ipv}/%{ip}/general"
+            headers => {
+                "X-OTX-API-KEY" => ""
+                "Content-Type" => "application/json"
             }
-        }
-        grok {
-            match => {
-                "cnt" => "(?<count>(?:\d{1,3}))"
-            }
+            target_body => "ovx"
         }
         mutate {
-            convert => {
-                "count" => "integer"
+            copy => {
+                "[ovx][reputation]" => "alienvault_score"
             }
-        }
-        if [count] > 0 {
-            mutate {
-                add_tag => ["RKN blocklisted"]
-            }
-        }
-        mutate {
-            remove_field => ["body", "headers", "rkn_check", "cnt", "count"]
+            remove_field => ["ovx"]
         }
     }
 
     # Virustotal check
     if [target_pub_ip] == [true] {
-        if [target_ipv] == 4 {
+        if [src_ipv] == '4' {
             http {
-                url => "https://www.virustotal.com/api/v3/ip_addresses/%{ip}"
+                url => "https://virustotal.com/api/v3/ip_addresses/%{ip}"
                 headers => {
                     "x-apikey" => ""
                 }
                 target_body => "vt"
-                target_headers => "[@metadata][vt-response-header]"
             }
             mutate {
                 copy => {
@@ -114,7 +99,6 @@ filter {
                 "ipAddress" => "%{ip}"
             }
             target_body => "abuseipdb"
-            target_headers => "[@metadata][abuseipdb_response_headers]"
         }
         mutate {
             copy => {
@@ -126,12 +110,17 @@ filter {
 
     # Team Cymru check
     if [target_pub_ip] == [true] {
-        if [target_ipv] == 4 {
+        if [target_ipv] == '4' {
                 teamcymru
                 {
                     ip => "ip"
                 }
         }
+    }
+
+    # Some cleanup
+    mutate {
+        remove_field => ["host", "event", "@timestamp", "@version", "src_ipv", "src_public_ip"]
     }
 }
 
