--- a/logstash.conf
+++ b/logstash.conf
@@ -45,7 +45,7 @@ filter {
             }
         }
         mutate {
-            remove_field => ["addr1", "addr2", "addr3", "addr4", "message", "spamhaus_reverse_lookup"]
+            remove_field => ["addr1", "addr2", "addr3", "addr4", "spamhaus_reverse_lookup"]
         }
     }
 
@@ -86,7 +86,7 @@ filter {
         }
     }
 
-    # Abuse IP DB check
+    # AbuseIPDB check
     if [target_pub_ip] == [true] {
         http {
             url => "https://api.abuseipdb.com/api/v2/check"
@@ -119,7 +119,7 @@ filter {
 
     # Some cleanup
     mutate {
-        remove_field => ["host", "event", "@timestamp", "@version", "src_ipv", "src_public_ip"]
+        remove_field => ["host", "event", "@timestamp", "@version", "src_ipv", "src_public_ip", "message"]
     }
 }
 
