--- a/logstash.conf
+++ b/logstash.conf
@@ -109,7 +109,7 @@ filter {
 
     # Team Cymru check
     if [target_pub_ip] == [true] {
-        if [target_ipv] == '4' {
+        if [src_ipv] == '4' {
                 teamcymru
                 {
                     ip => "ip"
