--- a/logstash.conf
+++ b/logstash.conf
@@ -29,17 +29,21 @@ filter {
                 add_field => {
                     "spamhaus_reverse_lookup" => "%{addr4}.%{addr3}.%{addr2}.%{addr1}.zen.spamhaus.org"
                 }
+                add_field => {
+                    "spamhaus_score" => 0
+                }
             }
             dns {
                 resolve => ["spamhaus_reverse_lookup"]
                 nameserver => ["8.8.8.8"]
-                add_tag => ["dns_successful_lookup"]
                 action => replace
             }
             if "dns_successful_lookup" in [tags] {
                 if [spamhaus_reverse_lookup] == "127.0.0.4" {
                     mutate {
-                        add_tag => [ "spam_address" ]
+                        replace => {
+                            "spamhaus_score" => 1
+                        }
                     }
                 }
             }
