Добавлен подсчет общего результата
Простое сравнение каждого параметра с порогами и вывод общего с помощью logstash-filter-ruby

--- a/logstash.conf
+++ b/logstash.conf
@@ -50,6 +50,9 @@ filter {
         }
         mutate {
             remove_field => ["addr1", "addr2", "addr3", "addr4", "spamhaus_reverse_lookup"]
+            convert => {
+                "spamhaus_score" => "integer"
+            }
         }
     }
 
@@ -68,6 +71,9 @@ filter {
                 "[ovx][reputation]" => "alienvault_score"
             }
             remove_field => ["ovx"]
+            convert => {
+                "alienvault_score" => "integer"
+            }
         }
     }
 
@@ -86,6 +92,9 @@ filter {
                     "[vt][data][attributes][reputation]" => "virustotal_score"
                 }
                 remove_field => ["vt"]
+                convert => {
+                    "virustotal_score" => "integer"
+                }
             }
         }
     }
@@ -108,6 +117,9 @@ filter {
                 "[abuseipdb][data][abuseConfidenceScore]" => "abuseipdb_score"
             }
             remove_field => ["headers", "abuseipdb"]
+            convert => {
+                "abuseipdb_score" => "integer"
+            }
         }
     }
 
@@ -119,8 +131,32 @@ filter {
                     ip => "ip"
                 }
         }
+        mutate {
+            convert => {
+                "teamcymru_score" => "integer"
+            }
+        }
     }
 
+    ruby {
+        code => 'total = 0
+                if event.get("spamhaus_score") == 1
+                    total+=1
+                end
+                if event.get("alienvault_score") == 1
+                    total+=1
+                end
+                if event.get("virustotal_score") < 0
+                    total+=1
+                end
+                if event.get("abuseipdb_score") > 50
+                    total+=1
+                end
+                if event.get("teamcymru_score") > 50
+                    total+=1
+                end
+                event.set("Total match", total)'
+    }
     # Some cleanup
     mutate {
         remove_field => ["host", "event", "@timestamp", "@version", "src_ipv", "src_public_ip", "message"]
