--- a/logstash.conf
+++ b/logstash.conf
@@ -14,6 +14,7 @@ filter {
         target_ipv => "src_ipv"
         target_pub_ip => "src_public_ip"
     }
+    
     # SpamHaus IP Checker
     # https://www.spamhaus.org/faq/section/DNSBL%20Usage#200
     # https://www.spamhaus.org/zen/
@@ -138,25 +139,41 @@ filter {
         }
     }
 
-    ruby {
-        code => 'total = 0
-                if event.get("spamhaus_score") == 1
-                    total+=1
-                end
-                if event.get("alienvault_score") == 1
-                    total+=1
-                end
-                if event.get("virustotal_score") < 0
-                    total+=1
-                end
-                if event.get("abuseipdb_score") > 50
-                    total+=1
-                end
-                if event.get("teamcymru_score") > 50
-                    total+=1
-                end
-                event.set("Total match", total)'
+    if [src_ipv] == '4' {
+        ruby {
+            code => 'total = 0
+                    if event.get("spamhaus_score") == 1
+                        total+=1
+                    end
+                    if event.get("alienvault_score") == 1
+                        total+=1
+                    end
+                    if event.get("virustotal_score") < 0
+                        total+=1
+                    end
+                    if event.get("abuseipdb_score") > 50
+                        total+=1
+                    end
+                    if event.get("teamcymru_score") > 50
+                        total+=1
+                    end
+                    event.set("Total match", total)'
+        }
     }
+
+    if [src_ipv] == '6' { 
+        ruby {
+            code => 'total = 0
+                    if event.get("alienvault_score") == 1
+                        total+=1
+                    end
+                    if event.get("abuseipdb_score") > 50
+                        total+=1
+                    end
+                    event.set("Total match", total)'
+        }
+    }
+    
     # Some cleanup
     mutate {
         remove_field => ["host", "event", "@timestamp", "@version", "src_ipv", "src_public_ip", "message"]
